Now aquires the users most popular years/range for films and most popular genres and stores it in the model.  Poster sizing issue fixed on a couple of the pages where it was being stretched.

--- a/MovieTvTracker.Web/wwwroot/css/site.css
+++ b/MovieTvTracker.Web/wwwroot/css/site.css
@@ -63,7 +63,7 @@ th.siteTheme {
 }
 
 .personSearchImgSize, .myWatchedMediaImgSize, .myFavoriteActorsImgSize {
-    width: 65px;
+    width: 62px;
     height: 93px;
     border-radius: 5px;
 }
